Styling and server name fix
The server name had dots on it if it was too small (I don't know how that makes sense but you do you) rather than too big
Fixed styling on the messages, they're no longer so spaced out and they're closer to the name like they are on discord

--- a/css/textFormat.css
+++ b/css/textFormat.css
@@ -46,13 +46,12 @@ a:hover {
     font-family: Whitney-light, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-weight: 400;
-    padding: 2px 0 3px 0;
+    padding: 1px 0 3px 0;
     margin: 0;
     color: #dcddde;
     width: calc(100% - 40px);
     word-spacing: 2px;
     position: relative;
-    right: 10px
 }
 
 .messageBoxText {
@@ -68,7 +67,7 @@ a:hover {
 }
 
 .messageTimestamp + .messageText {
-    margin-top: -25px;
+    margin-top: -27px;
 }
 
 .messageBlock {
